--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en" class="notranslate" translate="no">
 
 <head>
+	<link rel="icon" type="image/png" href="img/favicon-32x32.png">
 <meta charset="utf-8"/>
+<title>SpaceShip Escort</title>  
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8"> 
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
