--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" class="notranslate" translate="no">
   <head>
     <meta charset="utf-8" />
+	<link rel="icon" type="image/png" href="img/favicon-32x32.png">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta
       name="viewport"
