modify Start mission button

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 					style="
 						display: inline-block;
 						text-align: center;
+						cursor:pointer;
 						padding: 6px 20px 6px 20px;
 						font-size: 20px;
 						color: #d3fc6f;
