--- a/index.html
+++ b/index.html
@@ -13,6 +13,32 @@
 		<meta name="theme-color" content="#000000" />
 		<meta name="google" content="notranslate" />
 		<link rel="stylesheet" href="style.css" />
+		<!-- Preloader Style-->
+		<style>
+			.preloader{
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100vw;
+		height: 100vh;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		background: black;
+		transition: opacity 5s, visibility 5s;
+		z-index: 1000;
+	  }
+	  
+	  .preloader--hidden{
+		opacity: 0;
+		visibility: hidden;
+	  }
+	  .preloader img{
+		height: 200px;
+		width: 200px;
+		border-radius: 1000px;
+	  }
+		  </style>
 	</head>
 
 	<body
@@ -28,6 +54,18 @@
 			background-color: black;
 		"
 	>
+	<div class="preloader">
+		<img src="rocket.gif" alt="" class="center">
+	</div>
+	<script>
+		window.addEventListener("load", () => {
+  const loader = document.querySelector(".preloader");
+  loader.classList.add("preloader--hidden");
+  loader.addEventListener("transitionend", () => {
+  document.body.removeChild(loader);
+  });
+  });
+	  </script>
 		<div
 			id="mainMenu"
 			style="
