--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		style="
 			font-family: 'Arial';
 			font-size: 12px;
-			width: 100%;
-			height: 100%;
+			width: 100vw;
+			height: 100vh;
 			overflow: visible;
 			padding: 0px;
 			margin: 0px;
@@ -33,13 +33,13 @@
 			style="
 				position: absolute;
 				top: 0px;
-				width: 100%;
-				height: auto;
+				width: 100vw;
+				height: 100vh;
 				overflow: visible;
 				z-index: 100;
 			"
 		>
-			<div id="Gametitle" class="knockout" style="display: block">
+			<div id="Gametitle" class="knockout">
 				SpaceShip Escort
 			</div>
 
@@ -49,18 +49,22 @@
 				id="botonPlayInfo"
 				style="
 					text-shadow: 0 0 10px #27cfcc, 0 0 30px #27cfcc;
-					display: block;
-					width: 90%;
-					max-width: 61.5vh;
+					display: flex;
+					width: 90vh;
+					max-width:100vh;
 					left: 5%;
-					font-weight: 300;
-					font-size: 13px;
+					font-weight: 400;
+					font-size: 1rem;
 					margin: 0 auto;
-					padding: 5px;
+					padding: 25px;
 					color: #19cfcb;
 					height: auto;
 					background-color: none;
-				"
+					border: 1px solid #19cfcb;
+					box-shadow:4px 4px 8px #044;
+					border-radius: 16px;
+					letter-spacing: 1px;
+				" 
 			>
 				Year 13 after climate change.<br />
 				The Earth is uninhabitable.<br /><br />
@@ -89,7 +93,7 @@
 
 			<div
 				id="botonPlay"
-				style="text-align: center; width: 100%; margin-top: 30px"
+				style="text-align: center; width: 100%; margin:30px 0 40px 0"
 			>
 				<div
 					id="bpTxt"
