--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 						border-radius: 10px;
 						border: 3px solid #d3fc6f;
 						background-color: rgba(0, 0, 0, 0.5);
+					        cursor: pointer;
 					"
 				>
 					Start mission
