--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
 				<div  id="home-button" class="HB"
 				onclick="localStorage.setItem('SpaceEscort13kbGame2', 1+' '+help);location.reload();">
-						<img style="height: 20px;" src="https://github.com/GameSphere-MultiPlayer/Spaceship-escort/assets/98798977/62efccee-19d6-49e2-b998-ef3592a9d00d">
+						<img style="height: 20px;" src="img/home-button-svgrepo-com.svg">
 						<div class="tooltip">
 							Home
 						</div>
@@ -449,7 +449,7 @@
 					<div
 						id="helpb"
 						class=""
-						onclick="document.getElementById('helpD').style.display='block'; this.classList.remove('blink_me2'); this.style.boxShadow='0px 0px 5px 3px #044'; if(!help) localStorage.setItem('SpaceEscort13kbGame2', wave+' '+1);if(game_running){game_running=false;pause.style.backgroundColor='orange';pause.style.color='black';pause.innerHTML='&#9654;';}"
+						onclick="document.getElementById('helpD').style.display='block'; this.classList.remove('blink_me2'); this.style.boxShadow='0px 0px 5px 3px #044'; if(!help) localStorage.setItem('SpaceEscort13kbGame2', wave+' '+1);if(game_running){game_running=false;pause.style.backgroundColor='orange';pause.style.color='black';pause.style.paddingLeft = '5px';pause.innerHTML='&#9654;';}"
 						style="
 							position: absolute;
 							top: 5px;
@@ -490,7 +490,7 @@
 					</div>
 
 					<div
-						onclick="document.getElementById('config').style.display='block';if(game_running){game_running=false;pause.style.backgroundColor='orange';pause.style.color='black';pause.innerHTML='&#9654;';}"
+						onclick="document.getElementById('config').style.display='block';if(game_running){game_running=false;pause.style.backgroundColor='orange';pause.style.color='black';pause.style.paddingLeft = '5px';pause.innerHTML='&#9654;';}"
 						style="
 							position: absolute;
 							top: 5px;
@@ -514,7 +514,7 @@
 						//CHANGES : Help and setting button to be not visible at same moment!
 						const helpButton = document.getElementById('helpb');
 						const setting = document.getElementById('setting');
-
+						const PlayPause = document.getElementById('pause'); 
 						setting.addEventListener('click', () => {
 						helpD.style.display = 'none';
 						config.style.display = 'inline-block';
@@ -522,6 +522,11 @@
 
 						helpButton.addEventListener('click', () => {
 						helpD.style.display = 'inline-block';
+						config.style.display = 'none';
+						});
+
+						PlayPause.addEventListener('click', () => {
+						helpD.style.display = 'none';
 						config.style.display = 'none';
 						});
 				</script>
