change cursor to pointer

--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
 						value="0.5"
 						oninput="zzfxV=this.value;"
 						onchange="zzfxV=this.value;"
+						style="cursor: pointer;"
 					/>
 					<br /><br /><br /><br />
 					<div
@@ -266,6 +267,7 @@
 							text-align: center;
 							border-radius: 10px;
 							background-color: rgba(255, 255, 255, 0.2);
+							cursor: pointer;
 						"
 					>
 						Reset game to wave 1
@@ -281,6 +283,7 @@
 							text-align: center;
 							border-radius: 10px;
 							background-color: black;
+							cursor: pointer;
 						"
 					>
 						OK
@@ -352,6 +355,7 @@
 							text-align: center;
 							border-radius: 10px;
 							background-color: #333;
+							cursor: pointer; /* add cursor to attractive*/
 						"
 					>
 						Ok, close help
@@ -462,6 +466,7 @@
 							font-size: 12px;
 							border-radius: 50px;
 							background-color: black;
+							cursor: pointer;/* add cursor to attractive*/
 						"
 					>
 						?
@@ -481,6 +486,7 @@
 							font-size: 7px;
 							border-radius: 50px;
 							background-color: black;
+							cursor: pointer;/* add cursor to attractive*/
 						"
 						id="pause"
 					>
@@ -501,6 +507,7 @@
 							font-size: 13px;
 							border-radius: 50px;
 							background-color: black;
+							cursor: pointer;/* add cursor to attractive*/
 						"
 					>
 						&#x2699;
@@ -520,6 +527,7 @@
 							max-height: 17px;
 							color: #00b0b0;
 							background-color: rgba(0, 0, 0, 0.5);
+							cursor: pointer;/* add cursor to attractive*/
 						"
 					>
 						<span
@@ -530,6 +538,7 @@
 								height: 16px;
 								max-height: 16px;
 								transition: font-size 0.5s ease, color 0.2s ease;
+								cursor: pointer;/* add cursor to attractive*/
 							"
 							>500</span
 						>
@@ -546,12 +555,13 @@
 							height: auto;
 							color: cyan;
 							background-color: none;
+							cursor: pointer;
 						"
 					>
 						<div class="menuDivs">
 							<div
 								class="menuShips"
-								style="background-position: 0% -3%"
+								style="background-position: 0% -3%; cursor: pointer"
 								onclick="AAtype=2; AAsubtipo=1; selectShipmenu(this);"
 							>
 								<div class="nam">garbage<br />meteor</div>
@@ -566,6 +576,7 @@
 									background-position: 14.2% 3%;
 									border: 2px solid #d3fc6f;
 									box-shadow: 0px 0px 10px 2px #d3fc6f;
+									cursor: pointer;
 								"
 								onclick="AAtype=2; AAsubtipo=2; selectShipmenu(this);"
 							>
@@ -576,7 +587,7 @@
 						<div class="menuDivs">
 							<div
 								class="menuShips"
-								style="background-position: 28.5% 2%"
+								style="background-position: 28.5% 2%;cursor: pointer"
 								onclick="AAtype=2; AAsubtipo=3; selectShipmenu(this);"
 							>
 								<div class="nam">trident<br />figther</div>
@@ -586,7 +597,7 @@
 						<div class="menuDivs">
 							<div
 								class="menuShips"
-								style="background-position: 42.8% -5%"
+								style="background-position: 42.8% -5%;cursor: pointer"
 								onclick="AAtype=2; AAsubtipo=4; selectShipmenu(this);"
 							>
 								<div class="nam">spread<br />figther</div>
@@ -596,7 +607,7 @@
 						<div class="menuDivs">
 							<div
 								class="menuShips"
-								style="background-position: 56.9% -5%"
+								style="background-position: 56.9% -5%;cursor: pointer"
 								onclick="AAtype=2; AAsubtipo=5; selectShipmenu(this);"
 							>
 								<div class="nam">ionic<br />cannon</div>
@@ -606,7 +617,7 @@
 						<div class="menuDivs">
 							<div
 								class="menuShips"
-								style="background-position: 71.3% -2%"
+								style="background-position: 71.3% -2%;cursor: pointer"
 								onclick="AAtype=2; AAsubtipo=6; selectShipmenu(this);"
 							>
 								<div class="nam">hammer<br />ironclad</div>
@@ -616,7 +627,7 @@
 						<div class="menuDivs">
 							<div
 								class="menuShips"
-								style="background-position: 85.6% -5%"
+								style="background-position: 85.6% -5%;cursor: pointer"
 								onclick="AAtype=2; AAsubtipo=7; selectShipmenu(this);"
 							>
 								<div class="nam">neutrino<br />mine</div>
