--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		
 		
 		<div id="botonPlay" style="text-align:center; width:100%; margin-top:30px;">
-			<div id="bpTxt" class="blink_me" onclick="play();" style="display:inline-block; text-align:center; padding:6px 20px 6px 20px; font-size:20px; color:#d3fc6f; font-weight:500; box-shadow: 0px 0px 10px 5px #86a145; border-radius:10px; border:3px solid #d3fc6f; background-color:rgba(0,0,0,0.5);">
+			<div id="bpTxt" class="blink_me" onclick="play();" style="display:inline-block; text-align:center; padding:6px 20px 6px 20px; font-size:20px; color:#d3fc6f; font-weight:500; box-shadow: 0px 0px 10px 5px #86a145; border-radius:10px; border:3px solid #d3fc6f; background-color:rgba(34, 20, 20, 0.5);">
 				Start mission
 			</div>
 		</div>
@@ -66,7 +66,7 @@
 				<br><br>
 				&#10024; Select battle starships and place them strategically.
 				<br><br>
-				&#10024; Do not spend more Scriptium than neccesary.
+				&#10024; <b>Do not spend more Scriptium than neccesary.</b>
 			</div>
 		</div>
 		
