--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
 
 				<div style="position:absolute; top:16px; left:7%; width:20%; height:5px; color:gray; text-align:center; box-shadow: 0px 0px 5px 3px #044; font-weight:200; font-size:11px; border-radius:10px 0px 10px 0px; background-color:black;">
 					<div style="position:absolute; top:-15px; left:0px; width:100%; ">
-						alert status
+						<b>alert status</b>
+						<hr>
 					</div>
 					<div id="alertSt" style="position:absolute; top:1px; left:0px; width:1%; max-width:100%; height:4px; border-radius:10px 0px 10px 0px; background-color:red;">
 					</div>
@@ -345,6 +346,7 @@
 			>
 				Year 13 after climate change.<br />
 				The Earth is uninhabitable.<br /><br />
+				<hr>
 
 				The last space freighter, with 13 million fertilized and cryogenized
 				human ovules, leaves the earth, with 500 tons of Scriptium (Scm),
@@ -367,6 +369,7 @@
 				It will not be an easy task since other civilizations have conflicting
 				interests.<br />
 			</div>
+			<hr>
 
 			<div
 				id="botonPlay"
@@ -423,9 +426,9 @@
 					style="
 						pointer-events: none;
 						margin: 0 auto;
-						width: 80%;
-						max-width: 61.5vh;
-						font-weight: 500;
+						width: 85%;
+						max-width: 61vh;
+						font-weight: 600;
 						color: #c9af00;
 					"
 				>
