--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <meta name="theme-color" content="#000000" />
 <meta name="google" content="notranslate" />
 <link rel="stylesheet" href="style.css">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <script src="script.js"></script>
 
 </head>
