Fixed UI of homepage for proper and clear visibility

--- a/index.html
+++ b/index.html
@@ -292,20 +292,27 @@
 			<div
 				id="botonPlayInfo"
 				style="
-					text-shadow: 0 0 10px #27cfcc, 0 0 30px #27cfcc;
-					display: block;
-					width: 90%;
-					max-width: 61.5vh;
+					text-shadow: 0 0 10px #5cdcda, 0 0 30px #aac9c9;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					flex-direction: column;
+					flex: 1;
+					width: 100vw;
+					height: 100vh;
 					left: 5%;
 					font-weight: 300;
-					font-size: 13px;
+					font-size: 20px;
 					margin: 0 auto;
+					max-width: 120vh;
+					line-height: 1.5;
 					padding: 5px;
-					color: #19cfcb;
+					color: #0e1d1d;
 					height: auto;
 					background-color: none;
-				"
-			>
+					background: linear-gradient(to right, rgba(216, 132, 84, 0.863), rgb(225, 196, 117),rgb(227, 98, 126));
+					
+					">
 				Year 13 after climate change.<br />
 				The Earth is uninhabitable.<br /><br />
 
@@ -344,16 +351,16 @@
 						text-align: center;
 						padding: 6px 20px 6px 20px;
 						font-size: 20px;
-						color: #d3fc6f;
+						color: #1a0f09;
 						font-weight: 500;
-						box-shadow: 0px 0px 10px 5px #86a145;
+						box-shadow: 0px 0px 10px 5px #a1ab8a;
 						border-radius: 10px;
-						border: 3px solid #d3fc6f;
-						background-color: rgba(0, 0, 0, 0.5);
-					        cursor: pointer;
+						border: 3px solid #ebf20c;
+						background-color: rgba(234, 183, 183, 0.844);
+					    cursor: pointer;
 					"
 				>
-					Start mission
+					Start Mission🚀
 				</div>
 			</div>
 		</div>
