--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="notranslate" translate="no">
 
-
-
 <head>
 <meta charset="utf-8"/>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8"> 
@@ -11,11 +9,10 @@
 <meta name="theme-color" content="#000000" />
 <meta name="google" content="notranslate" />
 <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image" href="favicon.ico">
 <script src="script.js"></script>
 
 </head>
-
-
 
 <body style="font-family: 'Arial'; font-size:12px; width:100%; height:100%; overflow:visible; padding:0px; margin:0px; background-color:black;">
 
